changes to js file path

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="./main.css" />
   </head>
   <body>
     <fieldset>
@@ -23,6 +23,6 @@
       <p>Click on the item to mark it done.</p>
       <p>Click on the 'x' to remove it.</p>
     </fieldset>
-    <script src="index.js" async defer></script>
+    <script src="./index.js" async defer></script>
   </body>
 </html>
